--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -3,7 +3,6 @@
       <ion-title>Signup</ion-title>
     </ion-navbar>
   </ion-header>
-
   <ion-content padding>
     <form [formGroup]="formGroup" (ngSubmit)="signupUser(); $event.preventDefault()">
       <ion-item>
@@ -27,7 +26,6 @@
           <ion-radio value="2"></ion-radio>
         </ion-item>
       </ion-list>
-
       <ion-item>
         <ion-label stacked>CPF ou CNPJ</ion-label>
         <ion-input formControlName="cpfOuCnpj" type="text"></ion-input>
@@ -38,7 +36,6 @@
       </ion-item>
       <ion-item>
         <ion-label stacked>Logradouro*</ion-label>
-        <ion-input name="logradouro" type="text"></ion-input>
         <ion-input formControlName="logradouro" type="text"></ion-input>
       </ion-item>
       <ion-item>
@@ -47,7 +44,6 @@
       </ion-item>
       <ion-item>
         <ion-label stacked>Complemento</ion-label>
-        <ion-input name="complemento" type="text"></ion-input>
         <ion-input formControlName="complemento" type="text"></ion-input>
       </ion-item>
       <ion-item>
@@ -73,15 +69,13 @@
       <ion-item>
         <ion-label stacked>Estado*</ion-label>
         <ion-select formControlName="estadoId" (ionChange)="updateCidades()">
-          <ion-option value="1">Minas Gerais</ion-option>
-          <ion-option value="2">São Paulo</ion-option>
+          <ion-option *ngFor="let estado of estados; first as f" [value]="estado.id" [selected]="f">{{estado.nome}}</ion-option>
         </ion-select>
       </ion-item>
       <ion-item>
         <ion-label stacked>Cidade*</ion-label>
         <ion-select formControlName="cidadeId">
-          <ion-option value="1">Uberlândia</ion-option>
-          <ion-option value="2">Campinas</ion-option>
+          <ion-option *ngFor="let cidade of cidades" [value]="cidade.id">{{cidade.nome}}</ion-option>
         </ion-select>
       </ion-item>
       <button ion-button block type="submit">Criar conta</button>
