--- a/src/pages/produto-detail/produto-detail.html
+++ b/src/pages/produto-detail/produto-detail.html
@@ -6,7 +6,6 @@
     <ion-title>ProdutoDetail</ion-title>
   </ion-navbar>
 </ion-header>
-
 <ion-content padding>
   <ion-card>
     <img [src]="item?.imageUrl || 'assets/imgs/prod.jpg'"/>
@@ -20,5 +19,5 @@
     </ion-card-content>
   </ion-card>
 
-  <button ion-button block outline>Adicionar ao carrinho</button>
+  <button ion-button block outline (click)="addToCart(item)">Adicionar ao carrinho</button>
 </ion-content>
