--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -28,4 +28,5 @@
     </ion-item>
   </ion-list>
   <button ion-button block (click)="goOn()">Continuar comprando</button>
+  <button ion-button color="secondary" block (click)="checkout()">Finalizar pedido</button>
 </ion-content>
