--- a/src/pages/produto-detail/produto-detail.html
+++ b/src/pages/produto-detail/produto-detail.html
@@ -6,7 +6,11 @@
     <ion-title>ProdutoDetail</ion-title>
   </ion-navbar>
 </ion-header>
+
 <ion-content padding>
+  <ion-fab top right edge>
+    <button navPush="CartPage" ion-fab mini><ion-icon name="cart"></ion-icon></button>
+  </ion-fab>
   <ion-card>
     <img [src]="item?.imageUrl || 'assets/imgs/prod.jpg'"/>
     <ion-card-content>
@@ -18,6 +22,5 @@
       </p>
     </ion-card-content>
   </ion-card>
-
   <button ion-button block outline (click)="addToCart(item)">Adicionar ao carrinho</button>
 </ion-content>
