--- a/src/pages/pick-address/pick-address.html
+++ b/src/pages/pick-address/pick-address.html
@@ -6,12 +6,13 @@
     <ion-title>Fechamento de pedido</ion-title>
   </ion-navbar>
 </ion-header>
+
 <ion-content padding>
     <ion-list>
         <ion-list-header>
           Selecione um endereço
         </ion-list-header>
-        <button ion-item *ngFor="let item of items" (click)="nextPage(item)">
+        <button ion-item *ngFor="let item of items">
             <h2>{{item.logradouro}}, {{item.numero}}</h2>
             <p>{{item.complemento}} {{item.bairro}} CEP {{item.cep}}</p>
             <p>{{item.cidade.nome}}, {{item.cidade.estado.nome}}</p>
