--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -6,6 +6,7 @@
     <ion-title>Cart</ion-title>
   </ion-navbar>
 </ion-header>
+
 <ion-content padding>
   <ion-list>
     <ion-item *ngFor="let item of items">
@@ -28,5 +29,5 @@
     </ion-item>
   </ion-list>
   <button ion-button block (click)="goOn()">Continuar comprando</button>
-  <button ion-button color="secondary" block (click)="checkout()">Finalizar pedido</button>
+  <button *ngIf="total() > 0" ion-button color="secondary" block (click)="checkout()">Finalizar pedido</button>
 </ion-content>
