Fazendo upload da foto

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -6,14 +6,12 @@
     <ion-title>Profile</ion-title>
   </ion-navbar>
 </ion-header>
-
 <ion-content padding>
   <ion-avatar>
-    <img class="circle" [src]="profileImage">
+    <img class="circle" [src]="cliente?.imageUrl || 'assets/imgs/avatar-blank.png'">
   </ion-avatar>
   <h2 text-center>{{cliente?.nome}}</h2>
   <p text-center>{{cliente?.email}}</p>
-
   <ion-card>
     <ion-card-header>
       Enviar imagem de perfil
@@ -23,9 +21,8 @@
     </ion-item>
     <ion-item>
       <button ion-button block (click)="getCameraPicture()" [disabled]="cameraOn">Camera</button>
-      <button ion-button block (click)="getGalleryPicture()" [disabled]="cameraOn">Galeria</button>
       <button *ngIf="picture" ion-button outline block (click)="sendPicture()">Enviar imagem</button>
       <button *ngIf="picture" ion-button outline block (click)="cancel()">Descartar imagem</button>
     </ion-item>
-  </ion-card>
+  </ion-card>  
 </ion-content>
